force-app/main/default/objects/OA_Acquisition_Source__c/OA_Acquisition_Source__c.object-meta.xml
<CustomObject>
    <description>Enterprise Opportunity Acquisition &amp; Compliance source registry (Program 022): the governed inventory of WHERE opportunities and compliance obligations come from (federal/state/local procurement portals, certification/compliance portals, vendor-registration, partner portals, Zendesk, and Outlook email intake). Each record certifies access method + scraping status + ingestion priority so connectors only consume approved channels.</description>
    <label>Acquisition Source</label>
    <pluralLabel>Acquisition Sources</pluralLabel>
    <nameField><label>Source Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>