force-app/main/default/objects/OA_Acquisition_Source__c/fields/Access_Method__c.field-meta.xml
<CustomField>
    <fullName>Access_Method__c</fullName>
    <label>Access Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Email Alert</fullName>
            </value>
            <value>
                <fullName>RSS Feed</fullName>
            </value>
            <value>
                <fullName>Webhook</fullName>
            </value>
            <value>
                <fullName>File Download</fullName>
            </value>
            <value>
                <fullName>Web UI Only</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>