force-app/main/default/objects/OA_Acquisition_Source__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
<fullName>Certification_Status__c</fullName><label>Certification Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted>
<value><fullName>Certified</fullName><default>false</default><label>Certified</label></value>
<value><fullName>Needs Review</fullName><default>true</default><label>Needs Review</label></value>
<value><fullName>Uncertified</fullName><default>false</default><label>Uncertified</label></value>
</valueSetDefinition></valueSet></CustomField>