force-app/main/default/objects/OA_Acquisition_Source__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Sender Domain</label>
    <length>120</length>
    <type>Text</type>
</CustomField>