force-app/main/default/objects/OA_Acquisition_Source__c/fields/Evidence__c.field-meta.xml
<CustomField><fullName>Evidence__c</fullName><label>Evidence</label><type>Text</type><length>255</length></CustomField>