force-app/main/default/objects/OA_Acquisition_Source__c/fields/Ingestion_Priority__c.field-meta.xml
<CustomField>
    <fullName>Ingestion_Priority__c</fullName>
    <label>Ingestion Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
                <default>true</default>
                <label>P3</label>
            </value>
            <value>
                <fullName>Defer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>