force-app/main/default/objects/OA_Acquisition_Source__c/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>60</length>
    <type>Text</type>
</CustomField>