force-app/main/default/objects/OA_Acquisition_Source__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><label>Notes</label><type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines></CustomField>