force-app/main/default/objects/OA_Acquisition_Source__c/fields/Produces__c.field-meta.xml
<CustomField>
    <fullName>Produces__c</fullName>
    <label>Produces</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Partner Intelligence</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>