force-app/main/default/objects/OA_Acquisition_Source__c/fields/Scraping_Status__c.field-meta.xml
<CustomField>
    <fullName>Scraping_Status__c</fullName>
    <label>Scraping Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Prohibited</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>