force-app/main/default/objects/OA_Acquisition_Source__c/fields/Source_Group__c.field-meta.xml
<CustomField>
    <fullName>Source_Group__c</fullName>
    <label>Source Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Certification-Compliance</fullName>
            </value>
            <value>
                <fullName>Vendor-Registration</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Commercial-Zendesk</fullName>
            </value>
            <value>
                <fullName>Email-Intake</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>