force-app/main/default/objects/OA_Acquisition_Source__c/fields/Status__c.field-meta.xml
<CustomField>
<fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted>
<value><fullName>Active</fullName><default>true</default><label>Active</label></value>
<value><fullName>Inactive</fullName><default>false</default><label>Inactive</label></value>
</valueSetDefinition></valueSet></CustomField>